--- a/source/dwyl.GetMgpExpectationCore/dwyl.GetMgpExpectationCore.csproj
+++ b/source/dwyl.GetMgpExpectationCore/dwyl.GetMgpExpectationCore.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>dwyl.GetMgpExpectationCore</RootNamespace>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
